Fixed spacing issues on app page legacy wallet section

--- a/components/App/Ln/ln.module.scss
+++ b/components/App/Ln/ln.module.scss
@@ -22,6 +22,14 @@
   padding-bottom: 2rem;
 }
 
+.tab-spacing {
+  padding: 0 clamp(2rem, 10vw, 8rem);
+
+  @include md {
+    padding: 0;
+  }
+}
+
 .tab-item h4 {
   padding: 2rem 0 0;
 }
